--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,16 @@ branches:
 
 language: android
 sudo: false
+jdk:
+    - oraclejdk8
 
 android:
   components:
-    - build-tools-23.0.1
-    - android-23
-    - doc-23
+    - tools
+    - platform-tools
+    - build-tools-25.0.2
+    - android-25
+    - doc-25
     - extra-android-support
     - extra-android-m2repository
 
