--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 branches:
   only:
     - master
+    - /^\d+\.\d+\.\d+$/ # regex
 
 language: android
 sudo: false
@@ -32,3 +33,11 @@ cache:
   directories:
     - $HOME/.gradle
     - $HOME/.m2/repository
+
+deploy:
+  provider: script
+  script: ./gradlew bintrayUpload
+  skip_cleanup: true
+  on:
+    branch: master
+    tags: true
