--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "com.android.tools.build:gradle:3.5.2"
+        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.3"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
     }
 }
 
 plugins {
-    id 'com.github.ben-manes.versions' version '0.21.0'
+    id "com.github.ben-manes.versions" version "0.27.0"
 }
 
 allprojects {
